added cover image to the blogs

--- a/src/data/blog/building-kubernetes-observability-stack.mdx
+++ b/src/data/blog/building-kubernetes-observability-stack.mdx
@@ -3,6 +3,7 @@ title: "Building a Complete Observability Stack for Kubernetes"
 description: "A practical guide to wiring together Prometheus, Grafana Loki, Jaeger, Sentry, and OpenSearch into a unified observability platform for Kubernetes workloads."
 publishedDate: 2026-02-12
 tags: ["kubernetes", "observability", "cloud-native", "devops", "prometheus", "grafana"]
+coverImage: "/images/tekstack-observability.png"
 draft: false
 ---
 
