fix(30): revise plan 30-02 based on checker feedback

--- a/.planning/phases/30-overview-page/30-02-PLAN.md
+++ b/.planning/phases/30-overview-page/30-02-PLAN.md
@@ -15,7 +15,7 @@ must_haves:
     - "Visiting /tools/db-compass/ renders the complexity spectrum, model card grid, scoring table, and dimension legend"
     - "Users can filter models by use-case category via toggle buttons and filtered models show/hide in the card grid"
     - "JSON-LD Dataset + ItemList and BreadcrumbList structured data are present in the page HTML source"
-    - "The page has an SEO-optimized meta title and description under 160 characters"
+    - "The page has an SEO-optimized meta description that is at most 160 characters long"
     - "All 12 model cards link to /tools/db-compass/[slug]/ detail pages"
   artifacts:
     - path: "src/components/db-compass/UseCaseFilter.tsx"
@@ -149,14 +149,15 @@ Output: 2 files -- UseCaseFilter.tsx React island + index.astro overview page wi
     **Frontmatter:**
     - Import `getCollection` from `astro:content`
     - Import Layout from `../../../layouts/Layout.astro`
-    - Import all components: ComplexitySpectrum, ModelCardGrid, CompassScoringTable, DimensionLegend, CompassJsonLd, UseCaseFilter, BreadcrumbJsonLd, CapBadge
+    - Import components: ComplexitySpectrum, ModelCardGrid, CompassScoringTable, DimensionLegend, CompassJsonLd, UseCaseFilter, BreadcrumbJsonLd
+    - NOTE: Do NOT import CapBadge here -- it is only used inside ModelCardGrid.astro (already imported there)
     - Import totalScore from schema.ts
     - Load data: `const dbModels = await getCollection('dbModels');`
     - Map and sort: `const allModels = dbModels.map(e => e.data);` then sort by totalScore descending or by complexity position as appropriate for the spectrum
 
     **Layout wrapper:**
     - Title: `"Database Compass: Compare 12 Database Models Across 8 Dimensions | Patryk Golabek"` (SEO-06)
-    - Description: `"Interactive database model comparison tool. Compare Key-Value, Document, Relational, Graph, and 8 more models scored across scalability, performance, reliability, and 5 other dimensions."` (under 160 chars) (SEO-06)
+    - Description: `"Compare 12 database models across 8 dimensions -- scalability, performance, reliability, and more. Interactive scoring, filtering, and radar charts."` (149 characters -- MUST be under 160) (SEO-06)
 
     **Page sections (in order):**
 
@@ -187,11 +188,12 @@ Output: 2 files -- UseCaseFilter.tsx React island + index.astro overview page wi
     2. Run `npx astro build 2>&1 | grep 'tools/db-compass'` -- confirms page route exists
     3. Check the built HTML: `grep -l 'application/ld+json' dist/tools/db-compass/index.html` -- JSON-LD present
     4. Check breadcrumbs: `grep 'BreadcrumbList' dist/tools/db-compass/index.html` -- BreadcrumbList JSON-LD present
-    5. Check meta: `grep 'meta.*description' dist/tools/db-compass/index.html` -- description present
+    5. Check meta description length: `grep -oP 'content="\K[^"]+' dist/tools/db-compass/index.html | head -1 | wc -c` -- must be under 161 (160 chars + newline). Alternatively, extract the meta description and assert its character count is at most 160.
     6. Check data attributes: `grep 'data-model-id' dist/tools/db-compass/index.html` -- 12 model cards have data attributes
+    7. Verify CapBadge is NOT imported in index.astro: `grep -c 'CapBadge' src/pages/tools/db-compass/index.astro` -- should be 0
   </verify>
   <done>
-    Overview page at /tools/db-compass/ renders: hero section, complexity spectrum, use-case filter with 10 category toggles, 12-card model grid with radar thumbnails, sortable scoring table, dimension legend. JSON-LD Dataset+ItemList and BreadcrumbList present. SEO title and description set. Build passes clean.
+    Overview page at /tools/db-compass/ renders: hero section, complexity spectrum, use-case filter with 10 category toggles, 12-card model grid with radar thumbnails, sortable scoring table, dimension legend. JSON-LD Dataset+ItemList and BreadcrumbList present. SEO title and description set (description is 149 characters, under the 160-character limit). CapBadge is not imported directly -- it is used only within ModelCardGrid. Build passes clean.
   </done>
 </task>
 
@@ -201,20 +203,22 @@ Output: 2 files -- UseCaseFilter.tsx React island + index.astro overview page wi
 1. `npx astro build` succeeds with the overview page generated at /tools/db-compass/
 2. Page HTML contains `application/ld+json` script with Dataset and ItemList
 3. Page HTML contains BreadcrumbList JSON-LD with Home > Tools > Database Compass
-4. Page meta description is under 160 characters and contains database-related keywords
+4. Page meta description is under 160 characters (verified by character count assertion) and contains database-related keywords
 5. 12 model cards have `data-model-id` attributes for filter integration
 6. UseCaseFilter renders with `client:load` directive
 7. Scoring table is present and independent of filter state
 8. All existing Phase 29 components render correctly on the page
+9. CapBadge is NOT imported in index.astro (only used inside ModelCardGrid)
 </verification>
 
 <success_criteria>
 - /tools/db-compass/ renders with all 4 major sections: spectrum, grid, table, legend
 - Filter toggles 10 use-case categories and shows/hides model cards
 - JSON-LD and breadcrumb structured data are in page source
-- SEO meta title and description are present and optimized
+- SEO meta description is at most 160 characters
 - Page builds successfully as part of the full site build
 - All 12 model cards link to their detail page URLs
+- No unnecessary component imports in index.astro
 </success_criteria>
 
 <output>
